force-app/main/default/objects/Review__c/fields/Interviewer_Name__c.field-meta.xml
<CustomField>
    <fullName>Interviewer_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Interviewer Name</label>
    <referenceTo>Interviewer__c</referenceTo>
    <relationshipLabel>Reviews</relationshipLabel>
    <relationshipName>Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>