force-app/main/default/objects/Review__c/fields/Job_Application_No__c.field-meta.xml
<CustomField>
    <fullName>Job_Application_No__c</fullName>
    <label>Job Application No</label>
    <referenceTo>Job_Application__c</referenceTo>
    <relationshipLabel>Reviews</relationshipLabel>
    <relationshipName>Reviews</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>