force-app/main/default/objects/Review__c/fields/Language_Proficiency__c.field-meta.xml
<CustomField>
    <fullName>Language_Proficiency__c</fullName>
    <label>Language Proficiency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>