force-app/main/default/objects/Review__c/fields/Technical_Skillset__c.field-meta.xml
<CustomField>
    <fullName>Technical_Skillset__c</fullName>
    <label>Technical Skillset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>